force-app/main/default/objects/Expense_Allocation__c/Expense_Allocation__c.object-meta.xml
<CustomObject>
    <description>PCPM-235</description>
    <label>Expense Allocation</label>
    <nameField>
        <displayFormat>EAN-{00000}</displayFormat>
        <label>Expense Allocation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>