force-app/main/default/objects/Expense_Allocation__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Expense Allocations</relationshipLabel>
    <relationshipName>Expense_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>