force-app/main/default/objects/Expense_Allocation__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Organisation__c</referenceTo>
    <relationshipLabel>Expense Allocations</relationshipLabel>
    <relationshipName>Expense_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>