force-app/main/default/objects/Expense_Allocation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Expense Allocations</relationshipLabel>
    <relationshipName>Expense_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>