force-app/main/default/objects/Expense_Allocation__c/validationRules/EnterOrganisationOrDepartmentOrRole.validationRule-meta.xml
<ValidationRule>
    <fullName>EnterOrganisationOrDepartmentOrRole</fullName>
    <active>true</active>
    <description>PCPM-235 | When record is being created, any of these 3 fields need to be populated - Organization, Department, or Role.</description>
    <errorConditionFormula>AND( ISBLANK( Organisation__c ),  
     ISBLANK( Department__c ), 
     ISBLANK( Role__c)
 )</errorConditionFormula>
    <errorMessage>Please enter the value of organization or department or role.</errorMessage>
</ValidationRule>